--- a/mysql/docker-compose.yaml
+++ b/mysql/docker-compose.yaml
@@ -5,12 +5,15 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
     volumes:
+      - mysql_db_data:/var/lib/mysql
       - ./sql:/docker-entrypoint-initdb.d
     ports:
-      - "3306:3306"
+      - "3308:3306"
     networks:
       - mysql_network
 
 networks:
   mysql_network:
     driver: bridge
+volumes:
+  mysql_db_data:
